# MatKit

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
data_fetching/: __init__.py  fetch_data.py
examples/notebooks/: ABC_workflow_demo.ipynb  README.md.txt
examples/scripts/: 00_fetch_abc_data.py  01_clean_and_filter.py.txt  02_generate_features.py.txt  03_train_test_split.py  04_model_train_eval.py.txt  05_feature_importance.py.txt  README.md.txt  run_all.sh
featurization/: __init__.py.txt  additional.py  composition.py.txt  structure.py.txt
matkit/: __init__.py
matkit/core/: __init__.py  base.py  config.py  exceptions.py  logging.py
matkit/data/: __init__.py  cache.py  fetchers.py  validators.py
matkit/featurizers/: __init__.py  composition.py  conversions.py
matkit/utils/: __init__.py  chemistry.py  validators.py
modelling/: __init__.py
preprocessing/: preprocess.py.txt
utils/: __init__.py.txt
